--- a/slides/Additional_material.qmd
+++ b/slides/Additional_material.qmd
@@ -12,11 +12,24 @@ self-contained: true
 
 # Basic programming tools
 
-## If-statements
+# If-else statement
+if (a > b) {
+  print("a is greater than b")
+} else {
+  print("b is greater than or equal to a")
+}
 
-## For-loop
+# For loop
+for (i in 1:5) {
+  print(i)
+}
 
-## While-loop 
+# While loop
+x <- 1
+while (x <= 5) {
+  print(x)
+  x <- x + 1
+}
 
-# More complex visualisations
+# More complex visualisations --> ggplot? 
 
